--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"element-ui": "^1.4.4",
 		"es6-promise": "^4.1.1",
 		"fastclick": "^1.0.6",
-		"moment": "^2.18.1",
+		"moment": "^2.24.0",
+		"npm": "^6.7.0",
 		"twix": "^1.2.0",
 		"vue": "^2.4.2",
 		"vue-head": "^2.0.11",
@@ -29,17 +30,17 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^7.1.2",
-		"babel-core": "^6.22.1",
+		"babel-core": "^6.26.3",
 		"babel-eslint": "^7.1.1",
 		"babel-loader": "^7.1.1",
 		"babel-plugin-istanbul": "^4.1.1",
 		"babel-plugin-transform-runtime": "^6.22.0",
-		"babel-preset-env": "^1.3.2",
+		"babel-preset-env": "^1.7.0",
 		"babel-preset-stage-2": "^6.22.0",
 		"babel-register": "^6.22.0",
 		"chai": "^3.5.0",
 		"chalk": "^2.0.1",
-		"chromedriver": "^2.27.2",
+		"chromedriver": "^2.45.0",
 		"connect-history-api-fallback": "^1.3.0",
 		"copy-webpack-plugin": "^4.0.1",
 		"cross-env": "^5.0.1",
@@ -54,15 +55,15 @@
 		"eslint-plugin-promise": "^3.4.0",
 		"eslint-plugin-standard": "^2.0.1",
 		"eventsource-polyfill": "^0.9.6",
-		"express": "^4.14.1",
+		"express": "^4.16.4",
 		"extract-text-webpack-plugin": "^2.0.0",
 		"file-loader": "^0.11.1",
 		"friendly-errors-webpack-plugin": "^1.1.3",
 		"html-webpack-plugin": "^2.28.0",
-		"http-proxy-middleware": "^0.17.3",
+		"http-proxy-middleware": "^0.19.1",
 		"inject-loader": "^3.0.0",
 		"karma": "^1.4.1",
-		"karma-coverage": "^1.1.1",
+		"karma-coverage": "^1.1.2",
 		"karma-mocha": "^1.3.0",
 		"karma-phantomjs-launcher": "^1.0.2",
 		"karma-phantomjs-shim": "^1.4.0",
@@ -72,11 +73,11 @@
 		"karma-webpack": "^2.0.2",
 		"mocha": "^3.2.0",
 		"nightwatch": "^0.9.12",
-		"node-sass": "^4.5.3",
+		"node-sass": "^4.11.0",
 		"opn": "^5.1.0",
 		"optimize-css-assets-webpack-plugin": "^2.0.0",
 		"ora": "^1.2.0",
-		"phantomjs-prebuilt": "^2.1.14",
+		"phantomjs-prebuilt": "^2.1.16",
 		"rimraf": "^2.6.0",
 		"sass-loader": "^6.0.6",
 		"sass-resources-loader": "^1.3.1",
